# webassemby-rust-image-style-transfer

./: .gitignore  DEVELOPMENT.md  QUICK_START.md  README.md  STYLE_MODELS.md  build.ps1  build.sh  demo.js  download-models.ps1  download-models.sh  package-lock.json  package.json
frontend/: next.config.js  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Footer.tsx  ImageStyleTransfer.tsx
frontend/lib/: onnx-style.ts  wasm-loader.ts
rust-backend/: Cargo.toml
rust-backend/src/: lib.rs
